--- a/main/index.css
+++ b/main/index.css
@@ -3,11 +3,6 @@
     margin: 0 0 0 0;
 }
 
-body {
-    background-image: url('./assets/main.jpg');
-    background-size: cover;
-}
-
 header {
     background-color: #df91ca;
     color: #fff;
@@ -55,13 +50,108 @@ header nav a button {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
     cursor: pointer;
+    background-color: #4884b6;
+    color: #fff;
 }
 
 header nav a button:hover {
     background-color: black;
     color: #fbd278;
+    transition: background-color 0.3s ease;
 }
 
 header nav img {
     width: 50px;
+}
+
+
+.main {
+    background-image: url('./assets/main.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50vw;
+    flex-wrap: wrap;
+    gap: 200px;
+}
+
+#hero a  {
+    margin: 10px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #fdde84;
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+#hero a:hover {
+    transition: background-color 0.3s ease;
+    background-color: black;
+    color: #fbd278;
+}
+
+
+#hero p {
+    margin-top: 100px;
+    font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    color: #fdde84;
+}
+
+#hero h1 {
+    margin-top: 10px;
+    font-size: 60px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    color: #fdde84;
+}
+
+.about {
+    background-image: url('./assets/about.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50vw;
+    flex-wrap: wrap;
+    gap: 200px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    color: #ff882a;
+}
+
+#about h2 {
+    margin-top: 20px;
+    font-size: 60px;
+}
+
+#about p {
+    margin-top: 10px;
+    font-size: 20px;
 }
