--- a/main/index.css
+++ b/main/index.css
@@ -4,154 +4,158 @@
 }
 
 header {
-    background-color: #df91ca;
-    color: #fff;
-    padding: 10px;
+    background-color: #ee4729;
     text-align: center;
 }
 
-header nav ul li a {
-    text-decoration: none;
-    color: #fbd278;;
-}
-
 header nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
+    padding: 10px;
 }
 
 header nav ul {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+}
+
+header nav ul a{
+    text-decoration: none;
+    color: #fff;
+    transition: color 0.3s ease;
+    font-size: 25px;
+    cursor: pointer;
+    text-decoration: none;
+    &:hover {
+        color: black;
+    }
+}
+
+#main {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin: 20px;
     gap: 20px;
-    align-items: center;
-    justify-content: space-around;
-    padding-left: 75%;
 }
 
-header nav a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
+#main img {
+    width: 400px;
+    height: 150px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+    transform: scale(1);
 }
 
-header nav a button {
-    padding: 10px 5px;
-    border-radius: 5px;
-    border-color: transparent;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    cursor: pointer;
-    background-color: #4884b6;
-    color: #fff;
+#main h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #000;
+    font-family: Arial, sans-serif;
+    transition: color 0.3s ease;
+    font-weight: bold;
+    text-transform: uppercase;
+    /* text-decoration: underline; */
+    text-align: center;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    &:hover {
+        color: red;
+        transform: scale(1.1);
+    }
+    &:focus {
+        outline: none;
+    }
 }
 
-header nav a button:hover {
-    background-color: black;
-    color: #fbd278;
-    transition: background-color 0.3s ease;
-}
-
-header nav img {
-    width: 50px;
-}
-
-
-.main {
-    background-image: url('./assets/main.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+#main input {
+    padding: 10px;
+    margin: 10px 0;
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+    background-color: #fff;
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
 }
 
-#hero {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50vw;
-    flex-wrap: wrap;
-    gap: 200px;
-}
-
-#hero a  {
-    margin: 10px;
+#main button {
     padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #fdde84;
+    margin: 10px 0;
+    background-color: #ee4729;
     color: #fff;
-    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
     font-size: 20px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
+    font-weight: bold;
+    &:hover {
+        background-color: #d33a1c;
+    }
+    &:focus {
+        outline: none;
+    }
+}
+
+#main .description {
+    margin-top: 10px;
+    font-size: 20px;
+    color: #000;
+    font-family: Arial, sans-serif;
+}
+
+
+#main .desc {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: #3498db;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
     cursor: pointer;
 }
 
-#hero a:hover {
-    transition: background-color 0.3s ease;
-    background-color: black;
-    color: #fbd278;
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980b9;
 }
 
-
-#hero p {
-    margin-top: 100px;
-    font-size: 30px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    color: #fdde84;
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
-#hero h1 {
-    margin-top: 10px;
-    font-size: 60px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    color: #fdde84;
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
-.about {
-    background-image: url('./assets/about.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
 }
 
-#about {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50vw;
-    flex-wrap: wrap;
-    gap: 200px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    color: #ff882a;
-}
-
-#about h2 {
-    margin-top: 20px;
-    font-size: 60px;
-}
-
-#about p {
-    margin-top: 10px;
-    font-size: 20px;
+.dropdown:hover .dropdown-content {
+    display: block;
 }
